# ComfyUI_MooER

./: MooER_node.py  README.md  __init__.py  pyproject.toml  requirements.txt
example/: workflow.json
mooer/configs/: asr_config.py
mooer/models/: encoder.py  mooer_model.py
